--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,8 @@
         "dompdf/dompdf": "^1.2",
         "league/csv": "^9.8",
         "michelf/php-markdown": "^1.9",
-        "giggsey/libphonenumber-for-php": "^8.12"
+        "giggsey/libphonenumber-for-php": "^8.12",
+        "google/apiclient": "^2.0"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9",
