--- a/composer.json
+++ b/composer.json
@@ -7,7 +7,7 @@
     "require": {
         "php": "^7.3 || ^8.0",
         "codeigniter4/framework": "^4",
-        "lonnieezell/codeigniter-shield": "dev-develop",
+        "codeigniter4/shield": "dev-develop",
         "michalsn/codeigniter4-uuid": "^1.0",
         "whichbrowser/parser": "^2.1",
         "league/commonmark": "^2.3",
